# FerrisScript

./: .gitignore  .markdown-link-check.json  .markdownlint.json  AGENTS.md  APPLY_TO_PR3.md  ARCHITECTURE.md  BUNDLE_6_COMPLETION_REPORT.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  DOCS_LINTING_SUMMARY.md  DOCS_LINT_FINAL_STATUS.md  DOCS_LINT_FIXES.md  GODOT_SETUP_GUIDE.md  LICENSE  LOGO_SETUP.md  POST_PR3_FIXES.md  QUICK_REFERENCE.md  README.md  README_BRANCH.md  READY_TO_COMMIT.md  RELEASE_NOTES.md  RELEASING.md  SECURITY.md  TASK_COMPLETE_SUMMARY.md  V0.0.3_RELEASE_PR_DESCRIPTION.md  V0.0.3_RELEASE_REVIEW_SUMMARY.md  WORKFLOW_TEST.md  ferris-test.toml  package-lock.json  package.json  rustyscript.gdextension  sonar-project.properties  tarpaulin.toml  test.ferris  test_error.rs
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
assets/: README.md
crates/godot_bind/: Cargo.toml
crates/godot_bind/src/: lib.rs  signal_prototype.rs
crates/godot_bind/tests/: headless_integration.rs
crates/runtime/: Cargo.toml
crates/runtime/benches/: runtime_benchmarks.rs
crates/runtime/src/: lib.rs
crates/runtime/tests/: inspector_sync_test.rs
crates/test_harness/: Cargo.toml
crates/test_harness/src/: godot_cli.rs  lib.rs  main.rs  metadata_parser.rs  output_parser.rs  report_generator.rs  scene_builder.rs  test_config.rs  test_runner.rs
docs/: .gitignore  ARCHITECTURE.md  BENCHMARK_BASELINE.md  BRANCH_PROTECTION.md  COVERAGE_SETUP_NOTES.md  COVERAGE_STRATEGY.md  DEVELOPMENT.md  DOCUMENTATION_INVENTORY.md  DOCUMENTATION_LINKING_GUIDELINES.md  DOCUMENTATION_ORGANIZATION.md  EDGE_CASE_TESTING_SUMMARY.md  ENHANCEMENT_IDE_SUPPORT.md  ERROR_CODES.md  ERROR_CODES_crossref.txt  ERROR_MESSAGES_PHASE3_SUMMARY.md  ERROR_POINTER_FIX.md  ERROR_REPORTING_FIX.md  EXAMPLE_UPDATE_OPPORTUNITIES.md  FAQ.md  FUTURE_AUTOMATION.md  GITHUB_BADGES_GUIDE.md  GITHUB_INSIGHTS_DESCRIPTION.md  GITHUB_PROJECT_MANAGEMENT.md  Gemfile  HEADLESS_GODOT_SETUP.md  INTEGRATION_TESTS_FIXES.md  LEARNINGS.md  PHASE6_SUMMARY.md  PHASE6_TESTING.md  PHASE7_TESTING.md  PHASE8_TESTING.md  PHASE_2_COMPLETION_REPORT.md  PHASE_3_COMPLETION_REPORT.md  PHASE_4_COMPLETION_REPORT.md  PHASE_4_IMPLEMENTATION_PLAN.md  PHASE_TRACKING.md  PREFIX_FILTERING_BEHAVIOR.md  RUNNING_HEADLESS_TESTS.md  SINGLE_SOURCE_OF_TRUTH.md  SYNTAX_HIGHLIGHTING_MAINTENANCE.md  (+14 more)
examples/: INSPECTOR_QUICK_REF.md  INSPECTOR_TESTING_SUMMARY.md  INSPECTOR_TEST_GUIDE.md  README.md  bounce.ferris  branch.ferris  collections.ferris  collections.rscr  error_showcase.ferris  functions.ferris  hello.ferris  inspector_minimal.ferris  inspector_test.ferris  loop.ferris  loop.rscr  match.ferris  match.rscr  move.ferris  node_query_basic.ferris  node_query_error_handling.ferris  node_query_search.ferris  node_query_validation.ferris  reload.ferris  scene.ferris  signals.ferris  struct_literals_color.ferris  struct_literals_functions.ferris  struct_literals_rect2.ferris  struct_literals_transform2d.ferris  struct_literals_vector2.ferris  test_minimal.ferris  type_error.ferris
godot_test/: README.md  ferrisscript.gdextension  project.godot  rustyscript.gdextension  rustyscript.gdextension.uid  test_godot_bind.tscn  test_inspector_refresh.tscn  test_scene.tscn
scripts/: README.md  bench.ps1  bench.sh  coverage.ps1  coverage.sh  create-labels.ps1  create-labels.sh  format.ps1  (+16 more)
(+360 files in other folders)
