[workspace]
resolver = "2"
members = [
    "crates/compiler",
    "crates/runtime",
    "crates/godot_bind",
    "crates/test_harness",
]

[workspace.package]
version = "0.0.5"
edition = "2024"
rust-version = "1.94"
authors = ["FerrisScript Contributors"]
license = "MIT"

[workspace.dependencies]
criterion = "0.7"
 