[package]
name = "ferrisscript_godot_bind"
version = "0.0.3"
edition = "2021"

[dependencies]
# gdext is the Godot 4.x Rust binding (formerly gdextension)
# Using version 0.4 with api-4-3 feature for Godot 4.3+ compatibility
godot = { version = "0.4", features = ["api-4-3"] }
ferrisscript_compiler = { path = "../compiler" }
ferrisscript_runtime = { path = "../runtime" }

[lib]
crate-type = ["cdylib"]
