[package]
name = "ferrisscript_godot_bind"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
# gdext is the Godot 4.x Rust binding (formerly gdextension)
# api-4-7 pins codegen to the Godot minor we test against; keep in sync with
# godot_test/ferrisscript.gdextension and godot_test/project.godot
godot = { version = "0.5", features = ["api-4-7"] }
ferrisscript_compiler = { path = "../compiler" }
ferrisscript_runtime = { path = "../runtime" }

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
ferrisscript_test_harness = { path = "../test_harness" }
