[package]
name = "ferrisscript_test_harness"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors = ["dev-parkins"]
description = "Headless testing harness for FerrisScript + Godot integration"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.1"
regex = "1.10"
thiserror = "2.0"
anyhow = "1.0"

[[bin]]
name = "ferris-test"
path = "src/main.rs"

[lib]
name = "ferrisscript_test_harness"
path = "src/lib.rs"
